--- a/.github/workflows/master_csd226pipeline.yml
+++ b/.github/workflows/master_csd226pipeline.yml
@@ -56,7 +56,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'CSD226Pipeline'
+          app-name: 'csd226pipeline'
           slot-name: 'Production'
           package: '*.jar'
           
