--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=spring-boot
 server.port=443
-spring.boot.application.url=https://csd226pipeline.azurewebsites.net/app
+spring.boot.application.url=https://csd226pipeline.azurewebsites.net/
